# Quake3e

./: .gitignore  BUILD.bazel  Makefile  main.cpp
code/botlib/: BUILD.bazel  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_def.h  be_aas_entity.c  be_aas_file.c  be_aas_main.c  be_aas_move.c  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_routealt.c  be_aas_sample.c  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ea.c  be_interface.c  l_crc.c  l_libvar.c  l_log.c  l_memory.c  l_precomp.c  l_script.c  l_struct.c
code/cgame/: BUILD.bazel
code/client/: BUILD.bazel  cl_cgame.c  cl_curl.h  cl_jpeg.c  cl_main.c  cl_net_chan.c  cl_ui.c  client.h  snd_codec.h  snd_dma.c  snd_local.h
code/game/: BUILD.bazel
code/libjpeg/: BUILD.bazel
code/qcommon/: BUILD.bazel  cdkey.c  command_line_completion.c  common.c  events.c  keys.c  metrics.c  net_ip.c  processor.c  q_shared.h  qcommon.h  unzip.c  vm_x86.c
code/renderer/: BUILD.bazel  tr_common.h  tr_local.h
code/renderer2/: BUILD.bazel  tr_bsp.c  tr_common.h  tr_local.h
code/renderercommon/: BUILD.bazel  tr_font.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_tga.c  tr_noise.c
code/renderervk/: tr_common.h  tr_font.c  tr_local.h
code/sdl/: BUILD.bazel  sdl_gamma.c  sdl_glimp.c  sdl_glw.h  sdl_input.c  sdl_snd.c
code/server/: BUILD.bazel  server.h  sv_bot.c  sv_ccmds.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c
code/ui/: BUILD.bazel
code/unix/: BUILD.bazel  command_line.cpp  command_line.h  fpu.cpp  fpu.h  game.cpp  game.h  game_test.cpp  init.cpp  init.h  linux_local.h  linux_qgl.c  linux_qvk.c  linux_signals.c  loop.cpp  loop.h  main.cpp  time.cpp  time.h  time_of_day.cpp  time_of_day.h  time_test.cpp  unix_glw.h  unix_main.c  unix_shared.c
