filegroup(
    name = "qcommon",
    srcs = [
        "qcommon.h",
        "q_shared.h",
        "q_platform.h",
        "qfiles.h",
        "vm_local.h",
        "surfaceflags.h",
        "cm_public.h",
        "//code/renderercommon",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "common",
    srcs = [
        "common.c",
    ],
    hdrs = [
        ":qcommon",
        "//code/client",
    ],
    visibility = ["//visibility:public"],
)