cc_library(
    name = "qcommon",
    srcs = [
        "cdkey.c",
        "cmd.c",
        "cm_load.c",
        "cm_patch.c",
        "cm_polylib.c",
        "cm_test.c",
        "cm_trace.c",
        "common.c",
        "cvar.c",
        "files.c",
        "history.c",
        "huffman.c",
        "huffman_static.c",
        "keys.c",
        "md4.c",
        "md5.c",
        "msg.c",
        "net_chan.c",
        "net_ip.c",
        "puff.c",
        "q_math.c",
        "q_shared.c",
        "unzip.c",
        "vm.c",
        "vm_interpreted.c",
        "vm_x86.c",
        "vm_x86_ng.c",
    ],
    hdrs = [
        "cm_local.h",
        "cm_patch.h",
        "cm_polylib.h",
        "cm_public.h",
        "json.h",
        "puff.h",
        "qcommon.h",
        "qfiles.h",
        "q_platform.h",
        "q_shared.h",
        "surfaceflags.h",
        "unzip.h",
        "vm_local.h",
    ],
    deps = [
        "//code/ui",
        "//code/cgame",
        "//code/game",
        "//code/client:keys",
    ],
    visibility = ["//visibility:public"],
)