# OpenGL 2 renderer.
cc_library(
    name = "renderer2",
    srcs = [
        "stringify.c",
        "tr_animation.c",
        "tr_backend.c",
        "tr_bsp.c",
        "tr_cmds.c",
        "tr_curve.c",
        "tr_dsa.c",
        "tr_extensions.c",
        "tr_extramath.c",
        "tr_fbo.c",
        "tr_flares.c",
        "tr_glsl.c",
        "tr_image.c",
        "tr_image_dds.c",
        "tr_init.c",
        "tr_light.c",
        "tr_main.c",
        "tr_marks.c",
        "tr_mesh.c",
        "tr_model.c",
        "tr_model_iqm.c",
        "tr_postprocess.c",
        "tr_scene.c",
        "tr_shade.c",
        "tr_shade_calc.c",
        "tr_shader.c",
        "tr_shadows.c",
        "tr_sky.c",
        "tr_surface.c",
        "tr_vbo.c",
        "tr_world.c",
    ],
    hdrs = [
        "glext.h",
        "qgl.h",
        "tr_extramath.h",
        "tr_extratypes.h",
        "tr_common.h",
        "tr_dsa.h",
        "tr_fbo.h",
        "tr_local.h",
        "tr_postprocess.h",
    ],
    deps = [
        "//code/qcommon",
        "//code/renderercommon",
    ],
    visibility = ["//visibility:public"],
)
