cc_library(
    name = "sdl",
    srcs = [
        "sdl_input.c",
        "sdl_gamma.c",
        "sdl_glimp.c",
        "sdl_snd.c",
    ],
    hdrs = [
        "sdl_icon.h",
        "sdl_glw.h",
        "//code/client:client_header",
    ],
    deps = [
        "//code/qcommon",
        "//code/renderercommon",
        "//code/unix:linux_signals",
    ],
    copts = [
        "-I/usr/include/SDL2",
    ],
    linkopts= [
        "-lSDL2",
    ],
    visibility = ["//visibility:public"],
)
