cc_test(
    name = "game_test",
    srcs = ["game_test.cpp"],
    deps = [
        ":game",
    ],
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [
        ":game",
    ],
)

cc_library(
    name = "init",
    srcs = ["init.cpp"],
    hdrs = ["init.h"],
    deps = [
        ":command_line",
        ":time",
    ],
)

cc_library(
    name = "command_line",
    srcs = ["command_line.cpp"],
    hdrs = ["command_line.h"],
)

cc_test(
    name = "time_test",
    srcs = [
        "time_test.cpp",
    ],
    deps = [
        ":time",
    ],
)

cc_library(
    name = "time",
    srcs = ["time.cpp"],
    hdrs = [
        "time.h",
    ]
)

cc_library(
    name = "game",
    srcs = ["game.cpp"],
    hdrs = ["game.h"],
    deps = [
        ":init",
        ":fpu",
    ]
)

cc_library(
    name = "fpu",
    srcs = ["fpu.cpp"],
    hdrs = ["fpu.h"],
)
