cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [
        ":game",
        ":unix_main",
    ],
)

cc_test(
    name = "game_test",
    srcs = ["game_test.cpp"],
    deps = [
        ":game",
    ],
)

cc_library(
    name = "game",
    srcs = ["game.cpp"],
    hdrs = ["game.h"],
    deps = [
        ":loop",
        ":init",
    ]
)

cc_library(
    name = "init",
    srcs = ["init.cpp"],
    hdrs = ["init.h"],
    deps = [
        ":command_line",
        ":time",
    ],
)

cc_library(
    name = "command_line",
    srcs = ["command_line.cpp"],
    hdrs = ["command_line.h"],
)

cc_test(
    name = "time_test",
    srcs = [
        "time_test.cpp",
    ],
    deps = [
        ":time",
    ],
)

cc_library(
    name = "time",
    srcs = ["time.cpp"],
    hdrs = [
        "time.h",
    ]
)

cc_library(
    name = "loop",
    srcs = ["loop.cpp"],
    hdrs = ["loop.h"],
    deps = [
        ":fpu",
        ":linux_signals",
        "//code/sdl",
    ]
)

cc_library(
    name = "fpu",
    srcs = ["fpu.cpp"],
    hdrs = ["fpu.h"],
)

cc_library(
    name = "linux_signals",
    srcs = [
        "linux_signals.c",
    ],
    deps = [
        "//code/qcommon",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unix_main",
    srcs = [
        "unix_main.c",
    ],
    hdrs = [
        "linux_local.h",
    ],
    deps = [
        "//code/client",
        "//code/qcommon",
        "//code/renderercommon",
    ],
)

cc_library(
    name = "unix_shared",
    srcs = [
        "unix_shared.c",
    ],
    deps = [
        "//code/qcommon",
    ],
    linkopts= [
        "-ldl",
    ],
    visibility = ["//visibility:public"],
)